[gd_scene load_steps=4 format=3 uid="uid://cly5bmkuvct18"]

[ext_resource type="Script" path="res://CardNode.gd" id="1_tea1e"]

[sub_resource type="Theme" id="Theme_1hc2o"]
default_font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_st4vi"]

[node name="CardNode" type="Sprite2D"]
script = ExtResource("1_tea1e")

[node name="PointsLabel" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -103.0
offset_top = 96.0
offset_right = 13.0
offset_bottom = 151.0
theme = SubResource("Theme_1hc2o")
text = "15 pts"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_st4vi")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
